tests/paczka1/small_fuzzy/38380810.err
Error in line 6: 7MO S719 65,0
Error in line 10: Y42yhBG3pv S406 78,5
Error in line 12: 1u4x S719 79,7
